--- a/first.html
+++ b/first.html
@@ -209,7 +209,7 @@
   <script src="js/scrollax.min.js"></script>
 
   
-  <script src="js/main.js"></script>
+  <script src="js/main1.js"></script>
     
   </body>
 </html>
