--- a/second.html
+++ b/second.html
@@ -208,7 +208,7 @@
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
  
-  <script src="js/main.js"></script>
+  <script src="js/main1.js"></script>
     
   </body>
 </html>
