--- a/second.html
+++ b/second.html
@@ -112,7 +112,7 @@
 					</div>
 
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/EbXY7qDurqyhYxzm7';">
+						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/2jtiDN4A3f7grHPw5';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Knowledge_Agent.png);"></div>
 							</div>
@@ -140,7 +140,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/EbXY7qDurqyhYxzm7';">
+						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/xtWcCJJLT3bNb4Uf7';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/WebiPlex.png);"></div>
 							</div>
@@ -154,7 +154,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/EbXY7qDurqyhYxzm7';">
+						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/Tbg1SnCMWotzTyoD6';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Win_Task.png);"></div>
 							</div>
@@ -168,7 +168,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/EbXY7qDurqyhYxzm7';">
+						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/Y1VR4vuH7R8gfArY9';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Xcelerator_One.png);"></div>
 							</div>
