--- a/second.html
+++ b/second.html
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/BNEdRa8Vbu5gCMucA';">
+						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/jDVBwcg17D';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Bot_Stats.png);"></div>
 							</div>
@@ -112,7 +112,7 @@
 					</div>-->
 
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/2jtiDN4A3f7grHPw5';">
+						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/AUdNkBritj';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Knowledge_Agent.png);"></div>
 							</div>
