--- a/second.html
+++ b/second.html
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/jDVBwcg17D';">
+						<div class="staff"style="cursor: pointer;" onclick="location.href = 'https://forms.gle/Yj8uL6fx1aq6s98p8';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Bot_Stats.png);"></div>
 							</div>
