--- a/first.html
+++ b/first.html
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/dBQywP8W8Q';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSerTJimb46ce6vwURfOLlVAD9yHfHAxSitI8yzN-PzNfPhXOQ/viewform';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Bot_Stats.png);"></div>
 							</div>
