--- a/first.html
+++ b/first.html
@@ -52,9 +52,9 @@
 		
         <div class="row">
 			
-					<!--<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
+					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
 						
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://forms.gle/o6Rk5En4Sjr762Dn7';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/zLtJGrsE6d';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/SolVenia.png);"></div>
 							</div>
@@ -67,9 +67,9 @@
 							</div>
 						</div>
 						
-					</div>-->
-					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://forms.gle/hewitCC5nrLef7tn6';">
+					</div>
+					<!-- <div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/All_Spark.png);"></div>
 							</div>
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSerTJimb46ce6vwURfOLlVAD9yHfHAxSitI8yzN-PzNfPhXOQ/viewform';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Bot_Stats.png);"></div>
 							</div>
@@ -95,9 +95,9 @@
 		            </div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<!--<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://forms.gle/m5syikn9Sx2xXbiG6';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Electro_Neek.png);"></div>
 							</div>
@@ -111,8 +111,8 @@
 						</div>
 					</div>-->
 
-					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/cZzJae7iCd';">
+					<!-- <div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Knowledge_Agent.png);"></div>
 							</div>
@@ -124,7 +124,7 @@
 		            </div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<!--<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
 						<div class="staff" style="cursor: pointer;" onclick="location.href = './physics.html';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
@@ -139,8 +139,8 @@
 							</div>
 						</div>
 					</div>-->
-					<!--<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://forms.gle/WSH39rQMQuT9cnUeA';">
+					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/wnnGHel99T';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/WebiPlex.png);"></div>
 							</div>
@@ -152,9 +152,9 @@
 		            </div>
 							</div>
 						</div>
-					</div>-->
-					<!--<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://forms.gle/aaXCNNHxaAMcQzsw8';">
+					</div>
+					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/H4dEzDk6KV';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Win_Task.png);"></div>
 							</div>
@@ -166,9 +166,9 @@
 		            </div>
 							</div>
 						</div>
-					</div>-->
+					</div>
 					<!--<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://forms.gle/6oHBviPDFY31anac7';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Xcelerator_One.png);"></div>
 							</div>
