--- a/second.html
+++ b/second.html
@@ -125,8 +125,8 @@
 							</div>
 						</div>
 					</div> -->
-					<!--<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = './physics.html';">
+					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://docs.google.com/forms/d/e/1FAIpQLScIR9cUxvXL9akZV7DoulEnDylNUNprO-qQHiu4kBBVqx2FPQ/viewform?usp=sf_link';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/TruBot.png);"></div>
 							</div>
@@ -138,7 +138,7 @@
 		            </div>
 							</div>
 						</div>
-					</div>-->
+					</div>
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
 						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/irC1znGgM0';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
