--- a/first.html
+++ b/first.html
@@ -140,7 +140,7 @@
 						</div>
 					</div>-->
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = '_blank';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Xcelerator_One.png);"></div>
 							</div>
