--- a/first.html
+++ b/first.html
@@ -97,7 +97,7 @@
 						</div>
 					</div> -->
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/OexUBoUC4U';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Electro_Neek.png);"></div>
 							</div>
@@ -140,7 +140,7 @@
 						</div>
 					</div>-->
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/gPRTGX7uQw';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Xcelerator_One.png);"></div>
 							</div>
