--- a/second.html
+++ b/second.html
@@ -97,7 +97,7 @@
 						</div>
 					</div> -->
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/nZtGrWuy7G';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Electro_Neek.png);"></div>
 							</div>
@@ -112,7 +112,7 @@
 					</div>
 
 					<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-						<div class="staff" style="cursor: pointer;" onclick="location.href = '#';">
+						<div class="staff" style="cursor: pointer;" onclick="location.href = 'https://www.autoproctor.co/tests/start-test/i6Sguiq9kU';">
 							<div class="img-wrap d-flex align-items-stretch justify-content-end">
 								<div class="img align-self-stretch" style="background-image: url(images/Xcelerator_One.png);"></div>
 							</div>
