--- a/scores.html
+++ b/scores.html
@@ -348,7 +348,7 @@
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">All Time Winner</h3>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url();"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#"><h5>Participant name</h5></a></h3>
                   <div class="meta">
@@ -359,7 +359,7 @@
                 </div>
               </div>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url();"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#"><h5>Participant name</h5></a></h3>
                   <div class="meta">
@@ -370,7 +370,7 @@
                 </div>
               </div>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_3.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url();"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#"><h5>Participant name</h5></a></h3>
                   <div class="meta">
