--- a/scores.html
+++ b/scores.html
@@ -95,7 +95,7 @@
 	      </div>
 	    </div>
 	  </nav>
-	  <section class="img1 img2" style="background-image: url('https://lh3.googleusercontent.com/proxy/RAaupea8MH4P8vupiVA93nHjUfS0X3eId4MvkH7FEaGxHsqnMjU1z5qkY8Aa_E5gX4PYCkM5vEcjJoRN4vzLIG0KvhdDKFuJ68XpMIcu9ZsrV-A23j6vTYfCCHzoqv24nNspcwzHjFY');">
+	  <section class="img1 img2" style="background-image: url('./images/scoreback.png');">
       <div class="overlay"></div>
       
         <div class="row no-gutters slider-text align-items-end justify-content-center">
